# langchain-rag-course

./: COHERE_SETUP.md  GITHUB_UPLOAD_GUIDE.md  RAG_IMPLEMENTATION_EXPLAINED.md  README.md  pyproject.toml
01-rag-basics/: README.md  ingestion.py  main.py
02-agents-and-tools/: README.md
03-documentation-helper/: .env.example  README.md  app.py  crawler.py  ingestion.py  main.py  memory.py
04-reflection-agent/: README.md  chains.py  examples.py  graph.py  main.py  state.py
05-reflexion-agent/: README.md  chains.py  examples.py  graph.py  main.py  memory.py  state.py  validators.py
docs/: DOCUMENTATION_HELPER_EXPLAINED.md  REFLECTION_PATTERN_EXPLAINED.md
